// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should render ListItem correctly 1`] = `
<ListItem>
  <li
    className="ListItem"
    role="presentation"
  >
    <Text
      context="default"
      inline={false}
      key=".0"
      size="normal"
    >
      <p>
        An item
      </p>
    </Text>
  </li>
</ListItem>
`;

exports[`ListItem component should render correctly when disabled 1`] = `
<ListItem
  disabled={true}
>
  <li
    className="ListItem ListItem--disabled"
    role="presentation"
  >
    <Text
      context="default"
      inline={true}
      key=".0"
      size="normal"
    >
      <span>
        An item
      </span>
    </Text>
  </li>
</ListItem>
`;
